# earthquake_de_project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
dags/: earthquake_extract.py
tests/: test_dag_integrity.py
