[project]
name = "earthquake-de-project"
version = "0.1.0"
description = "Earthquake pipeline project"
authors = [{ name = "s-yu-dev", email = "s.yukhnovets@proton.me" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "apache-airflow==2.10.3",
    "duckdb>=1.0.0",
    "pendulum>=3.0.0",
    "s3fs", 
    "psycopg2-binary>=2.9.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"